--- a/style.css
+++ b/style.css
@@ -966,7 +966,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 .object {
   width: 20px;
   height: 20px;
-  background-color: #e03927;
+  background-color: #075e55;
   float: left;
   border-radius: 50% 50% 50% 50%;
   margin-right: 20px;
