--- a/style.css
+++ b/style.css
@@ -1521,7 +1521,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   position: relative;
 }
 .hs-item::before {
-  background-color: rgba(45, 62, 80, 0.9);
+  background-color: #075e55;
   position: absolute;
   content: "";
   left: 0;
@@ -1529,6 +1529,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   top: 0;
   bottom: 0;
   z-index: 2;
+  opacity:0.9;
 }
 .hs-item .hs-item-wrapper {
   padding: 85px 120px 0;
