--- a/style.css
+++ b/style.css
@@ -2510,7 +2510,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   padding: 10px 28px;
   border: none;
   color: #fff;
-  background-color: #e03927;
+  background-color: #075e55;
   float: left;
   display: block;
   text-transform: uppercase;
