--- a/style.css
+++ b/style.css
@@ -1240,6 +1240,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   width: 234px;
   z-index: 1;
   padding-top: 10px;
+  padding-bottom:10px;
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .navbar-header .logo {
