--- a/style.css
+++ b/style.css
@@ -2403,7 +2403,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: #e03927;
+  background-color: #0a4c2f;
   opacity: 0;
   z-index: 1;
   content: "";
