--- a/style.css
+++ b/style.css
@@ -1152,7 +1152,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 }
 /*-- Header Top --*/
 .header-top {
-  background-color: #075e55;
+  background-color: #82131d;
   padding: 15px 0;
 }
 @media only screen and (max-width: 479px) {
@@ -1251,8 +1251,8 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .navbar-header .logo {
-    width: 150px;
-    padding: 20px 25px 20px;
+    max-width:100%;
+    padding: 5px 0px 5px;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -1413,7 +1413,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 /*----------------------------------------*/
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .hero-area {
-    margin-top: 178px;
+    margin-top: 10px;
   }
 }
 @media only screen and (max-width: 479px) {
@@ -1532,7 +1532,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   position: relative;
 }
 .hs-item::before {
-  background-color: #075e55;
+  background-color: #0a492e;
   position: absolute;
   content: "";
   left: 0;
