--- a/style.css
+++ b/style.css
@@ -1068,6 +1068,25 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   top: 0;
   z-index: 9999;
 }
+.header-area .header-search {
+    padding: 10px 0 0px;
+    transition: all 0.3s ease 0s;
+}
+.header-button > a {
+    background-color: #ea000d;
+    color: #fff;
+    font-size: 13px;
+    font-weight: 700;
+    padding: 13px 35px;
+    text-transform: uppercase;
+    transition: all 0.4s ease 0s;
+}
+.header-button > a:hover {
+    background-color: #333;
+}
+.header-button.floatright {
+    margin-left: 45px;
+}
 .header-area.stick .header-bottom {
   position: fixed;
   left: 0;
